# foodplanner

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dbt_project.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_db_connection.sql
.cursor/plans/: backend_frontend_integration.plan.md  neo4j_recipe_graph.plan.md  robust_ingestion_pipeline_0d8cf487.plan.md
.cursor/rules/: README.md  celery-tasks.mdc  database.mdc  docker.mdc  fastapi.mdc  python-style.mdc  scrapers.mdc  testing.mdc  workspace.mdc
docs/: docker.md  frontend-ux.md  graph-database.md  integrations.md  pipeline.md  plan.md  testing.md
foodplanning/: __init__.py  config.py
foodplanning/modeling/: predict.py  train.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: DiscountBadge.tsx  MealCard.tsx  MealDayColumn.tsx  PeopleSelector.tsx  PreferencesSelector.tsx  ShoppingListPanel.tsx
frontend/src/components/ui/: badge.tsx  calendar.tsx  label.tsx  sheet.tsx
frontend/src/hooks/: useCategories.ts  useMealPlan.ts  useRecipes.ts  useStores.ts
frontend/src/pages/: MealPlanView.tsx  NotFound.tsx  PlanSetup.tsx  ShoppingList.tsx
frontend/src/stores/: mealPlanStore.ts  preferencesStore.ts  shoppingListStore.ts
frontend/src/utils/: cn.ts  constants.ts
models/bronze/: bronze_foodplanner.yml
models/bronze/foodplanner/: bronze_foodplanner.yml
models/gold/: gold_tests.yml
models/gold/customer_service/: users_360.sql
models/silver/foodplanner/: silver_foodplanner_dietary_preferences.sql  silver_foodplanner_foodplan_recipes.sql  silver_foodplanner_foodplans.sql  silver_foodplanner_ingredients.sql  silver_foodplanner_magazines.sql  silver_foodplanner_magazines_ingredients.sql  silver_foodplanner_payments.sql  silver_foodplanner_recipes.sql  silver_foodplanner_recipes_ingredients.sql  silver_foodplanner_subscriptions.sql  silver_foodplanner_users.sql  silver_foodplanner_users_to_preferences.sql
sandbox/: generate_fake_data.py  separate_dataset_into_chunks.py
scripts/: scrape_tilbudsavis.py  scrape_to_db.py  seed_database.py
src/foodplanner/: celery_app.py  config.py  database.py  logging_config.py  main.py  models.py  schemas.py
src/foodplanner/graph/: __init__.py  database.py  matching.py  models.py  repository.py  service.py
src/foodplanner/ingest/: __init__.py  batch_ingest.py  schemas.py
src/foodplanner/ingest/connectors/: __init__.py  base.py  mealdb.py
src/foodplanner/ingest/scrapers/: __init__.py  base.py  rema1000.py
src/foodplanner/normalize/: __init__.py  units.py
src/foodplanner/orchestrator/: __init__.py
src/foodplanner/order/: __init__.py
src/foodplanner/plan/: __init__.py  optimizer.py  shopping_list.py
src/foodplanner/routers/: __init__.py  ingestion.py  meal_plans.py  recipes.py  scraping.py  stores.py
src/foodplanner/tasks/: __init__.py  graph_ingestion.py  ingestion.py  scraping.py
tests/: __init__.py  conftest.py  test_graph_models.py  test_health.py  test_ingredient_matching.py  test_mealdb_connector.py  test_optimizer.py  test_scrapers.py  test_shopping_list.py
tests/integration/: __init__.py  test_full_scrape.py  test_infrastructure.py  test_ingestion_pipeline.py  test_product_ingestion.py  test_rema1000_scraper.py
