[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foodplanner"
version = "0.1.0"
description = "Meal planning from local discounts with deterministic pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg",
    "beautifulsoup4>=4.12.0",
    "celery[redis]>=5.3.0",
    "fastapi",
    "httpx",
    "lxml>=5.0.0",
    "neo4j>=5.0",
    "pydantic",
    "pydantic-settings>=2.0",
    "psycopg2-binary",
    "python-dotenv",
    "rapidfuzz>=3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0",
    "tenacity>=8.0.0",
    "uvicorn",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pre-commit>=3.6.0",
    "detect-secrets>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/foodplanner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "B008",  # Function call in default argument (FastAPI Depends pattern)
    "B904",  # Exception chaining (common in API error handlers)
    "E712",  # Comparison to True (SQLAlchemy filter pattern)
    "UP038", # Use X | Y in isinstance (compatibility preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow longer lines in tests

[tool.ruff.lint.isort]
known-first-party = ["foodplanner"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["foodplanner"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
